Bug 62868 - solaris build broken with missing ffsll
Summary: solaris build broken with missing ffsll
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: 9.1
Hardware: Other Solaris
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-28 14:44 UTC by Pierre Ossman
Modified: 2013-04-02 15:27 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
MesaLib-9.1.1-ffs.patch (517 bytes, text/plain)
2013-03-28 14:44 UTC, Pierre Ossman
Details

Description Pierre Ossman 2013-03-28 14:44:08 UTC
Created attachment 77157 [details]
MesaLib-9.1.1-ffs.patch

Mesa uses ffsll, which isn't present on Solaris. It is however present as a builtin in gcc, which is sufficient. But for unclear reasons the Mesa headers will only properly use that on a specific list of platforms, instead of all gcc compliations.

Attached patch removes this restrictive list and uses the builtins whenever gcc is used and the native versions are missing.
Comment 1 Alan Coopersmith 2013-03-28 15:20:10 UTC
For what it's worth Solaris 11 and later have ffsll(), but not older releases.
The patch to use the gcc builtins when possible makes sense to me.
Comment 2 Brian Paul 2013-04-02 15:27:48 UTC
Should be fixed with commit 95df2b28831147b3e7ce2a3b6257bf60c46b4ab4


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.